--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,37 +15,17 @@ environment:
       ARCH: x86
       MAKETOOL: mingw32-make
       CMAKE_GENERATOR: "MinGW Makefiles"
-      USE_CMAKE: true
       MSBUILD_FLAGS: 
-#    - QTABI: mingw53_32
-#      ARCH: x86
-#      QMAKESPEC: win32-g++
-#      MAKETOOL: mingw32-make
-#      USE_CMAKE: false
     - QTABI: msvc2017_64
       ARCH: x64
       VSVER: 2017
       CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
-      USE_CMAKE: true
       MSBUILD_FLAGS: /verbosity:minimal /maxcpucount
-#    - QTABI: msvc2017_64
-#      ARCH: x64
-#      VSVER: 2017
-#      QMAKESPEC: win32-msvc
-#      MAKETOOL: jom
-#      USE_CMAKE: false
     - QTABI: msvc2015
       ARCH: x86
       VSVER: 14
       CMAKE_GENERATOR: "Visual Studio 15 2017"
-      USE_CMAKE: true
       MSBUILD_FLAGS: /verbosity:minimal /maxcpucount
-#    - QTABI: msvc2015
-#      ARCH: x86
-#      VSVER: 14
-#      QMAKESPEC: win32-msvc
-#      MAKETOOL: jom
-#      USE_CMAKE: false
 
 skip_tags: true
 
@@ -72,47 +52,16 @@ install:
   - echo "BUILD ID Qt%QTVER%_%QTABI%_%APPVEYOR_BUILD_VERSION%_%CONFIGURATION%"
   # Rename sh.exe as sh.exe in PATH interferes with MinGW
   - rename "C:\Program Files\Git\usr\bin\sh.exe" "sh2.exe"
+  - cmd: choco install OpenCV
+  - cmd: set OPENCV_DIR=C:\tools\opencv\build
+  
 
 build_script:
-#  - dir "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Tools\MSVC\14.16.27023\include"
-#  - type "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Tools\MSVC\14.16.27023\include\random"
-#  - dir "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\INCLUDE"
-#  - type "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\INCLUDE\random"
   - mkdir build
   - cd build
   - if "%CONFIGURATION%"=="release" (set CMAKE_CONFIGURATION=Release) else (set CMAKE_CONFIGURATION=Debug)
-  - if [%USE_CMAKE%]==[true] (
-      echo "Call CMake..."
-      cmake --version &&
-      cmake -G "%CMAKE_GENERATOR%" "-DCMAKE_PREFIX_PATH=%QT5%" .. &&
-      echo "Build..." &&
-      cmake --build . --config "%CMAKE_CONFIGURATION%" -- %MSBUILD_FLAGS% ) 
-    else (
-      echo "Call QMake..." &&
-      qmake.exe -v &&
-      qmake.exe CONFIG+=%CONFIGURATION% ..\JKQtExtrasBuildAllExamples.pro &&
-      echo "Build..." &&
-      call %MAKETOOL% &&
-      cd ..)
-
-#artifacts:
-#   - path: build\staticlib\**\*.a
-#     name: staticlib %QTVER%%QTABI%
-#   - path: build\sharedlib\**\*.a
-#     name: sharedlib %QTVER%%QTABI%
-#   - path: build\staticlib\**\*.lib
-#     name: staticlib %QTVER%%QTABI%
-#   - path: build\sharedlib\**\*.lib
-#     name: sharedlib %QTVER%%QTABI%
-#   - path: build\sharedlib\**\*.dll
-#     name: dll %QTVER%%QTABI%
-
-
-
-# # remote desktop connection on init
-# init:
-  # - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
-
-# # remote desktop connection on finish and block build to not destroy VM
-# on_finish:
-  # - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+  - echo "Call CMake..."
+  - cmake --version &&
+  - cmake -G "%CMAKE_GENERATOR%" "-DCMAKE_PREFIX_PATH=%QT5%" -DOpenCV_DIR=%OPENCV_DIR% -DTinyMAT_QT5_SUPPORT=ON -DTinyMAT_OPENCV_SUPPORT=ON -DTinyMAT_BUILD_SHARED_LIBS=ON -DTinyMAT_BUILD_STATIC_LIBS=ON  .. &&
+  - echo "Build..." &&
+  - cmake --build . --config "%CMAKE_CONFIGURATION%" -- %MSBUILD_FLAGS% ) 
