--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -68,9 +68,18 @@ if(TinyMAT_BUILD_STATIC_LIBS)
     target_include_directories(${lib_name} PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>  
-    )
+        )
     if (HAVE_FOPEN_S)
-        target_compile_definitions(${libsh_name} PRIVATE HAVE_FOPEN_S)
+        target_compile_definitions(${lib_name} PRIVATE HAVE_FOPEN_S)
+    endif()
+    if (HAVE_SPRINTF_S)
+        target_compile_definitions(${lib_name} PRIVATE HAVE_SPRINTF_S)
+    endif()
+    if (HAVE_MEMCPY_S)
+        target_compile_definitions(${lib_name} PRIVATE HAVE_MEMCPY_S)
+    endif()
+    if (HAVE_GMTIME_S)
+        target_compile_definitions(${lib_name} PRIVATE HAVE_GMTIME_S)
     endif()
     if(TinyMAT_FILEBACKEND_USE_MEMORY_CACHE)
         target_compile_definitions(${lib_name} PRIVATE TINYMAT_WRITE_VIA_MEMORY)
