- travis-build uses OpenCV - improved Documentation - added OpenCV-example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -5,5 +5,10 @@ add_subdirectory(basic_test)
 
 #optional test: using Qt framework
 if (${Qt5_FOUND})
-	add_subdirectory(test_qt)
+        add_subdirectory(test_qt)
+endif()
+
+#optional test: using OpenCV framework
+if (${OpenCV_FOUND})
+        add_subdirectory(test_opencv)
 endif()
