Can be include as a CMake project now.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -158,9 +158,9 @@ endif(TinyMAT_BUILD_STATIC_LIBS)
 
 install(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} COMPONENT Headers)
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/tinymatwriter_export.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR} )
-configure_file(${CMAKE_SOURCE_DIR}/readme.txt.in ${CMAKE_CURRENT_BINARY_DIR}/readme.txt @ONLY)
+configure_file(${PROJECT_SOURCE_DIR}/readme.txt.in ${CMAKE_CURRENT_BINARY_DIR}/readme.txt @ONLY)
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/readme.txt" DESTINATION "${TinyMAT_DOC_INSTALL_DIR}/${lib_name}/" )
-install(FILES "${CMAKE_SOURCE_DIR}/LICENSE" DESTINATION "${TinyMAT_DOC_INSTALL_DIR}/${lib_name}/" )
-install(FILES "${CMAKE_SOURCE_DIR}/README.md" DESTINATION "${TinyMAT_DOC_INSTALL_DIR}/${lib_name}/" )
+install(FILES "${PROJECT_SOURCE_DIR}/LICENSE" DESTINATION "${TinyMAT_DOC_INSTALL_DIR}/${lib_name}/" )
+install(FILES "${PROJECT_SOURCE_DIR}/README.md" DESTINATION "${TinyMAT_DOC_INSTALL_DIR}/${lib_name}/" )
 
 
