fixed not compiling when QT is noct present

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ if(NOT DEFINED TinyMAT_OPENCV_SUPPORT)
     option(TinyMAT_OPENCV_SUPPORT "Build with Support for OpenCV" ${OpenCV_FOUND})
 endif()
 if(NOT DEFINED TinyMAT_QT5_SUPPORT)
-    find_package(Qt5 COMPONENTS Core REQUIRED)
+    find_package(Qt5 COMPONENTS Core)
     option(TinyMAT_QT5_SUPPORT "Build with Support for Qt5" ${Qt5_FOUND})
 endif()
 if(NOT DEFINED TinyMAT_BUILD_SHARED_LIBS)
@@ -86,7 +86,7 @@ if (TinyMAT_QT5_SUPPORT)
 endif()
 if (TinyMAT_OPENCV_SUPPORT)
     # check for Qt
-    find_package(OpenCV)
+    find_package(OpenCV REQUIRED)
     if (${OpenCV_FOUND})
         message(NOTICE "compiling ${PROJECT_NAME} width OpenCV-support")
     else()
