--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -57,15 +57,15 @@ jobs:
         echo ${{github.workspace}}
         cmake -G "${{matrix.gen}}" -A ${{matrix.arch}} "-DCMAKE_PREFIX_PATH=${{github.workspace}}/install/" -B . -S ..
         cmake --build . --config Release --verbose  
-#    - name: Test CMake-build against TinyMAT, using FetchContent-API
-#      if: success() || failure() # always run even if the previous step fails
-#      run: |
-#        cd examples
-#        cd extcmake_tinymat_test
-#        mkdir build 
-#        cd build
-#        cmake -G "${{matrix.gen}}" -A ${{matrix.arch}} -B . -S ..
-#        cmake --build . --config Release --verbose  
+    - name: Test CMake-build against TinyMAT, using FetchContent-API
+      if: success() || failure() # always run even if the previous step fails
+      run: |
+        cd examples
+        cd extcmake_fetchcontent_tinymat_test
+        mkdir build 
+        cd build
+        cmake -G "${{matrix.gen}}" -A ${{matrix.arch}} -B . -S ..
+        cmake --build . --config Release --verbose  
 
 #    - name: Run Release tests
 #      run: |
