--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,19 +17,23 @@ include(tinymat_build_type)
 if(NOT DEFINED TinyMAT_FILEBACKEND_USE_MEMORY_CACHE)
     option(TinyMAT_FILEBACKEND_USE_MEMORY_CACHE "Build with a file-backend, that caches the output in memory, before writing to disk (sets TINYMAT_WRITE_VIA_MEMORY when building)" ON)
 endif()
+if(NOT DEFINED BUILD_SHARED_LIBS)
+    option(BUILD_SHARED_LIBS "Build as shared library" ON)
+endif()
 if(NOT DEFINED TinyMAT_OPENCV_SUPPORT)
     find_package(OpenCV)
     option(TinyMAT_OPENCV_SUPPORT "Build with Support for OpenCV" ${OpenCV_FOUND})
 endif()
-if(NOT DEFINED TinyMAT_QT5_SUPPORT)
-    find_package(Qt5 COMPONENTS Core)
-    option(TinyMAT_QT5_SUPPORT "Build with Support for Qt5" ${Qt5_FOUND})
-endif()
-if(NOT DEFINED TinyMAT_BUILD_SHARED_LIBS)
-    option(TinyMAT_BUILD_SHARED_LIBS "Build as shared library" ON)
-endif()
-if(NOT DEFINED TinyMAT_BUILD_STATIC_LIBS)
-    option(TinyMAT_BUILD_STATIC_LIBS "Build as static library" OFF)
+if(NOT DEFINED TinyMAT_QT_SUPPORT)
+    find_package(QT NAMES Qt6 Qt5 COMPONENTS Core)
+    if(${Qt5_FOUND})
+        set(TinyMAT_QT_SUPPORT ON)
+    else()
+        if(${Qt6_FOUND})
+            set(TinyMAT_QT_SUPPORT ON)
+        endif()
+    endif()
+    option(TinyMAT_QT_SUPPORT "Build with Support for Qt5/6" ${TinyMAT_QT_SUPPORT})
 endif()
 if(NOT DEFINED TinyMAT_BUILD_DECORATE_LIBNAMES_WITH_BUILDTYPE)
     option(TinyMAT_BUILD_DECORATE_LIBNAMES_WITH_BUILDTYPE "If set, the build-type (debug/release/...) is appended to the library name" ON)
@@ -39,6 +43,11 @@ if(NOT DEFINED TinyMAT_BUILD_EXAMPLES)
 endif()
 if(NOT DEFINED CMAKE_INSTALL_PREFIX)
     option(CMAKE_INSTALL_PREFIX "Install directory" ${CMAKE_CURRENT_SOURCE_DIR}/install)
+endif()
+if(NOT CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
+    # We're in the root, define additional targets for developers.
+    # This prepares the library to be used with CMake's FetchContent
+    set(TinyMAT_BUILD_EXAMPLES OFF)
 endif()
 
 
@@ -75,20 +84,30 @@ endif()
 
 ######################################################################################################
 # check for dependency libs
-if (TinyMAT_QT5_SUPPORT)
+if (TinyMAT_QT_SUPPORT)
     # check for Qt
-    find_package(Qt5 COMPONENTS Core REQUIRED)
+
+    find_package(QT NAMES Qt6 Qt5 COMPONENTS Core REQUIRED)
+    if(QT_VERSION_MAJOR LESS 5)
+        message(FATAL_ERROR "Minimum supported Qt version is 5, but you are trying to compile against Qt${QT_VERSION_MAJOR}")
+    endif()
+
+    find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core REQUIRED)
     if (${Qt5_FOUND})
-        message(NOTICE "compiling ${PROJECT_NAME} width Qt5-support")
+        message(NOTICE "compiling ${PROJECT_NAME} with Qt5-support")
     else()
-        message(FATAL_ERROR "could not find Qt5 on your system")
+        if (${Qt6_FOUND})
+            message(NOTICE "compiling ${PROJECT_NAME} with Qt6-support")
+        else()
+            message(FATAL_ERROR "could not find Qt5 on your system")
+        endif()
     endif()
 endif()
 if (TinyMAT_OPENCV_SUPPORT)
     # check for Qt
     find_package(OpenCV REQUIRED)
     if (${OpenCV_FOUND})
-        message(NOTICE "compiling ${PROJECT_NAME} width OpenCV-support")
+        message(NOTICE "compiling ${PROJECT_NAME} with OpenCV-support")
     else()
         message(FATAL_ERROR "could not find OpenCV on your system")
     endif()
