--- a/examples/extcmake_tinymat_test/CMakeLists.txt
+++ b/examples/extcmake_tinymat_test/CMakeLists.txt
@@ -4,10 +4,10 @@ cmake_minimum_required(VERSION 3.0)
 set(EXAMPLE_NAME extcmake_tinymat_test)
 
 # now find libTinyMAT
-find_package(libTinyMAT REQUIRED)
+find_package(TinyMAT REQUIRED)
 
 # add an executable
 add_executable(${EXAMPLE_NAME} extcmake_tinymat_test.cpp)
 
 # link against libTinyMAT
-target_link_libraries(${EXAMPLE_NAME} libTinyMAT)
+target_link_libraries(${EXAMPLE_NAME} TinyMAT::TinyMAT)
