--- a/examples/basic_test/CMakeLists.txt
+++ b/examples/basic_test/CMakeLists.txt
@@ -5,11 +5,7 @@ set(EXAMPLE_NAME ${PROJECT_NAME}_basic_test)
 add_executable(${EXAMPLE_NAME}
 	test_tinymat.cpp
 )
-if(TinyMAT_BUILD_STATIC_LIBS)
-    target_link_libraries(${EXAMPLE_NAME} TinyMAT)
-elseif(TinyMAT_BUILD_SHARED_LIBS)
-    target_link_libraries(${EXAMPLE_NAME} TinyMATShared)
-endif()
+target_link_libraries(${EXAMPLE_NAME} TinyMAT::TinyMAT)
 
 # Installation
 install(TARGETS ${EXAMPLE_NAME} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
